@@ -25,6 +25,8 @@ Trunk (unreleased changes)
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
     HADOOP-1746 Clean up findbugs warnings
+    HADOOP-1757 Bloomfilters: single argument constructor, use enum for bloom
+                filter types
 
 
 Below are the list of changes before 2007-08-18
